# precision-cascade

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  precision-cascade.def
benchmark/: CMakeLists.txt
benchmark/data/: .gitignore
benchmark/include/: benchmark.h  benchmark_AP_GMRES_IR.h  benchmark_Dense.h  benchmark_FP_GMRES_IR.h  benchmark_GMRES.h  benchmark_MP_GMRES_IR.h  benchmark_Matrix.h  benchmark_Sparse.h  benchmark_VP_GMRES_IR.h  benchmark_tools.h
benchmark/main/: benchmark.cpp
benchmark/src/: benchmark_tools.cpp
benchmarking/: CMakeLists.txt
benchmarking/include/: benchmark.h  benchmark_GMRES.h  benchmark_Nested_GMRES.h
benchmarking/src/: benchmark_GMRES.cpp  benchmark_ILUPreconditioner.cpp  benchmark_NoFillMatrixSparse.cpp  benchmark_Precond_FP_GMRES_IR.cpp  benchmark_Precond_MP_GMRES_IR.cpp
experimentation/: CMakeLists.txt  experiment.cpp  experiment.h  experiment_read.cpp  experiment_read.h  experiment_record.h  experiment_run_subroutines.h  experiment_tools.cpp  experiment_tools.h  run_experiment.h
experimentation/include/: CMakeLists.txt  experiment_log.h  experiment_read.h  experiment_record.h  experiment_recorders.h  experiment_run.h  experiment_run_record.h  experiment_tools.h
experimentation/main/: CMakeLists.txt  experiment.cpp
experimentation/src/: CMakeLists.txt  experiment_log.cpp  experiment_read.cpp  experiment_record.cpp  experiment_recorders.cpp  experiment_run.cpp  experiment_run_record.cpp  experiment_tools.cpp
experimentation/test/: CMakeLists.txt  test_experiment.cpp  test_experiment.h  test_read.cpp  test_record.cpp  test_run.cpp  test_run_record.cpp
include/: CMakeLists.txt  PrecisionCascade.h
include/adapter/: DenseMatrix.h
include/experimentation/: SolveRecorder.h
include/preconditioners/: ILU.h  ILUPreconditioner.h  ImplementedPreconditioners.h  Implemented_Preconditioners.h  JacobiPreconditioner.h  MatrixInverse.h  MatrixInversePreconditioner.h  NoPreconditioner.h  Preconditioner.h  implemented_preconditioners.h
include/read_matrix/: MatrixReader.h
include/solvers/: FP_GMRES_IR.h  GMRES.h  InnerOuterSolve.h  IterativeRefinement.h  IterativeSolve.h  Jacobi.h  LinearSolve.h  RestartedGMRES.h  SOR.h
include/tools/: AbsoluteVal.h  ArgPkg.cpp  ArgPkg.h  CMakeLists.txt  DenseConverter.h  Heap.h  ILU.h  ILU_subroutines.h  ILUarchivecode.txt  LinearSystem.h  MatrixReader.h  MatrixWriter.h  PrecondArgPkg.h  SolveArgPkg.h  SolveRecorder.h  SolverArgPkg.h  Sort.h  Substitution.h  TypeIdentity.h  VectorSort.h  abs.h  cuHandleBundle.h  cublas_check.h  cuda_check.h  math_functions.h  read_matrix.h  record_solve.h  tools.h  vector_sort.h
include/types/: IsSameTemplate.h  MatrixBase.h  MatrixDense.h  MatrixSparse.h  MatrixVector.h  Scalar.h  TemplateCheck.h  Vector.h  template_check.h  types.h
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/read_matrix/: CMakeLists.txt  MatrixReader.cpp
src/tools/: AbsoluteVal.cpp  ArgPkg.cpp  CMakeLists.txt  abs.cpp  cuHandleBundle.cu  cublas_check.cu  cuda_check.cu  math_functions.cpp  read_matrix.cpp
src/types/: CMakeLists.txt  MatrixVector.cu  MatrixVector_dbl.cu  MatrixVector_hlf.cu  MatrixVector_sgl.cu
test/: CMakeLists.txt  test.cpp  test.cu  test.h  test_FP_GMRES_IR_Solve.cpp  test_GMRES.cpp  test_InnerOuterSolve.cpp  test_IterativeSolve.cpp  test_Jacobi.cpp  test_LinearSolve.cpp  test_MatrixReader.cpp  test_SOR.cpp  test_Substitution.cpp  test_assertions.h  test_toolkit.cpp  test_toolkit.h  test_tools.cpp  test_tools.h
test/benchmarking/: benchmark_FP_GMRES_IR.cpp  benchmark_GMRES.cpp  benchmark_GMRESSolve.cpp  benchmark_ILUPreconditioner.cpp  benchmark_MP_GMRES_IR.cpp  benchmark_Matrix.cpp  benchmark_MatrixDense.cpp  benchmark_NoFillMatrixSparse.cpp  playground.cpp
test/include/: test.h  test_assertions.h  test_toolkit.h
test/main/: test.cpp
test/read_matrices/: bad1.csv  bad_matrixdim1.mtx  bad_matrixdim2.mtx  bad_matrixdim6.mtx  bad_matrixdim7.mtx  bad_matrixentry1.mtx  bad_matrixentry3.mtx  bad_matrixentry4.mtx  bad_matrixentry5.mtx  bad_matrixentry7.mtx  bad_matrixentry8.mtx  bad_wrongorder1.mtx  bad_wrongorder2.mtx  double_precise.csv  double_precise.mtx  double_precise_manual.csv  double_precise_symmetric.mtx  half_precise.csv  half_precise.mtx  precise.csv  single_precise.csv  single_precise.mtx  square.mtx  square2.csv  square_general_match.mtx  square_symmetric.mtx  tall.csv  wide.csv
test/solve_matrices/: A_20_rand.csv  A_25_3eigs.csv  A_25_invprecond_saddle.csv  A_25_saddle.csv  A_5.csv  A_5_easysoln.csv  A_5_toy.csv  A_64_toy.csv  A_7_dummy_backsub.csv  A_inv_45.csv  Ainv_inv_45.csv  L_tri_90.csv  Lb_tri_90.csv  Q_8_backsub.csv  R_8_backsub.csv  U_tri_90.csv  Ub_tri_90.csv  b_20_rand.csv  b_25_3eigs.csv  b_25_saddle.csv  b_5_easysoln.csv  b_5_toy.csv  b_64_toy.csv  b_7_dummy_backsub.csv  b_inv_45.csv  b_tri_90.csv  conv_diff_1024_A.csv  conv_diff_1024_b.csv  conv_diff_1024_x.csv  conv_diff_256_A.csv  conv_diff_256_Asqr.csv  conv_diff_256_b.csv  conv_diff_256_x.csv  conv_diff_64_A.csv  conv_diff_64_Asqr.csv  conv_diff_64_b.csv  conv_diff_64_x.csv  ilu_A.csv  ilu_L.csv  ilu_L_pivot.csv  (+29 more)
test/src/: test.cpp
test/test_GMRES/: test_GMRES.h  test_GMRESComponents.cpp  test_GMRESDouble.cpp  test_GMRESHalf.cpp  test_GMRESSingle.cpp  test_GMRES_components.cpp  test_GMRES_solve_dbl.cpp  test_GMRES_solve_hlf.cpp  test_GMRES_solve_sgl.cpp  test_PGMRES.cpp  test_PGMRES_components.cpp  test_PGMRES_solve.cpp
test/test_IterativeSolve/: test_IterativeSolve.cpp  test_IterativeSolve.h
test/test_Preconditioner/: test_ILU.cpp  test_Preconditioner.cpp
test/test_SOR/: test_GaussSeidel.cpp  test_SOR.cpp
test/test_preconditioners/: test_ILU.cpp  test_ILU0.cpp  test_ILU0Preconditioner.cpp  test_ILUPreconditioner.cpp  test_ILUTP.cpp  test_ILUTPPreconditioner.cpp  test_JacobiPreconditioner.cpp  test_MatrixInversePreconditioner.cpp  test_NoPreconditioner.cpp  test_Preconditioner.cpp
test/test_solvers/: CMakeLists.txt  test_FP_GMRES_IR_Solve.cpp  test_InnerOuterSolve.cpp  test_Jacobi.cpp
test/test_tools/: test_ArgPkg.cpp  test_GenericLinearSystem.cpp  (+15 more)
(+3770 files in other folders)
